# ambulance_response_time_ml_project

./: .gitignore  README.md  ambulance response time - omir gibreel  -  Repaired.pptx  ambulance response time - omir gibreel.pptx  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
docs/: DATASET_DESCRIPTION.md  PROJECT_OVERVIEW_AND_ENHANCEMENT_GUIDE.md  TECHNICAL_DOCUMENTATION.md  WEBAPP_HOSTING_GUIDE.md
outputs/models/: lightgbm.joblib  linear_regression.joblib  xgboost.joblib
outputs/reports/: case_level_model_predictions.csv  data_summary.json  feature_importance.csv  final_report.md  model_comparison.csv  model_predictions.csv  sample_cases_for_manual_check.csv
scripts/: build_updated_powerpoint.js
src/ambulance_response_time_ml/: __init__.py  cli.py  config.py  data.py  modeling.py  reporting.py
