[project]
name = "ambulance-response-time-ml"
version = "1.0.0"
description = "Predict ambulance response time with Linear Regression and Random Forest."
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "joblib>=1.3",
    "openpyxl>=3.1",
]

[project.scripts]
ambulance-ml = "ambulance_response_time_ml.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
