[project]
name = "ambulance-response-time-ml"
version = "1.0.0"
description = "Predict ambulance response time with Linear Regression and Random Forest."
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas==2.3.3",
    "numpy==2.0.2",
    "scikit-learn==1.6.1",
    "matplotlib==3.9.4",
    "joblib==1.5.3",
    "openpyxl==3.1.5",
    "streamlit==1.50.0",
    "xgboost==2.1.4",
    "lightgbm==4.6.0",
    "shap==0.49.1",
    "plotly==6.7.0",
]

[project.scripts]
ambulance-ml = "ambulance_response_time_ml.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
