[project]
name = "ambulance-response-time-ml"
version = "1.0.0"
description = "Predict ambulance response time with Linear Regression and Random Forest."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3",
    "numpy>=2.0",
    "scikit-learn>=1.6",
    "matplotlib>=3.9",
    "joblib>=1.5",
    "openpyxl>=3.1",
    "streamlit>=1.50",
    "xgboost>=2.1",
    "lightgbm>=4.6",
    "shap>=0.49",
    "plotly>=6.0",
    "pyarrow>=21.0",
]

[project.scripts]
ambulance-ml = "ambulance_response_time_ml.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
